tests/tooling/fixtures/native/execution/negative/for_missing_lparen.objc3
module ForMissingLParenExec;

fn main() -> i32 {
  for let i = 0; i < 3; i = i + 1 {
    let x = i;
  }
  return 0;
}
